--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Sheba Med"
 APP_ENV=local
 APP_KEY=base64:2WtVxwBJK+rlON/iiWqnZ8qgYrX6GN+w8k8Wg3zsl9A=
 APP_DEBUG=true
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST= smtp.mailgun.org
+MAIL_PORT= 587
+MAIL_USERNAME=postmaster@sandbox1bc975a9170e4baa821f94fdc18941b4.mailgun.org
+MAIL_PASSWORD=42a1b5c3204f8b4ca0ec9afa09bd2a63-5e7fba0f-8a32af37
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="himelsarker010@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
